--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <meta property="og:title" content="React Boilerplate Example App" />
+    <meta property="og:title" content="Виджет заказа" />
     <meta property="og:description" content="" />
     <meta
       property="og:image"
       content="https://repository-images.githubusercontent.com/250347048/15514f00-8713-11ea-9f9d-796a89b5de4d"
     />
-    <title>React Boilerplate Example App</title>
+    <title>Виджет заказа</title>
     <meta
       name="description"
       content=""
@@ -53,5 +53,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <widget-order site_url="https://soho.mba" course_uid="12" tariff_uid="10" materials_limit="10"></widget-order>
   </body>
 </html>
