--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <widget-order site_url="https://soho.mba" course_uid="12" tariff_uid="10" materials_limit="10"></widget-order>
+    <widget-order site_url="https://soho.mba" course_uid="11" catalog_item_uid="43"></widget-order>
   </body>
 </html>
