SL-1542 widget-order@2.30.2

--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,7 @@
       content="https://repository-images.githubusercontent.com/250347048/15514f00-8713-11ea-9f9d-796a89b5de4d"
     />
     <title>Виджет заказа</title>
-    <meta
-      name="description"
-      content=""
-    />
+    <meta name="description" content="" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -54,6 +51,18 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <widget-order site_url="https://soho.mba" course_uid="11" catalog_item_uid="43"></widget-order>
+    <widget-order
+      site_url="http://s-2.localhost:1804"
+      rates_visible="true"
+      course_uid="12"
+      catalog_item_uid="129"
+      title_bg="#233D78"
+      title_text="#FFFFFF"
+      colored_text="#233d78"
+      content_bg="#FFFFFF"
+      content_text="#1D3247"
+      extra_bg="#233D78"
+      main_bg="#F1F5F9"
+    ></widget-order>
   </body>
 </html>
